--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,8 @@
 
 
 body {
-  /* font-family: "Muli", sans-serif;
+  font-family: "Muli", sans-serif;
+  /* 
   display: flex;
   align-items: center;
   justify-content: center;
@@ -17,10 +18,14 @@ body {
   /* margin: 0; */
 }
 
+p {
+  color: white;
+}
+
 #piano-container {
   /* display: flex;
   flex-direction: column */
-  margin: 20px 20px 20px 20px;
+  margin: 20px 20px 5px 20px;
 }
 #piano {
   display: flex;
@@ -122,7 +127,7 @@ body {
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  margin: 10px;
+  margin: 0px 0px 10px 0px;
 }
 
 #interval-guess-buttons {
@@ -195,4 +200,13 @@ body {
 #interval-second-row-buttons {
   display: flex;
   gap: 8px;
+}
+
+
+#random-playing-technique-direction {
+  align-items: center;
+  justify-content: center;
+  margin: 0px;
+  font-size: 12px;
+  opacity: 0; /* initially hidden */
 }
